--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "aos": "^2.3.4",
     "firebase": "^11.9.0",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
