--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "firebase": "^11.9.0",
+    "framer-motion": "^6.5.1",
     "lottie-react": "^2.4.1",
     "react": "^19.1.0",
     "react-countdown-circle-timer": "^3.2.1",
@@ -21,6 +22,7 @@
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-router": "^7.6.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8",
