--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "aos": "^2.3.4",
     "axios": "^1.9.0",
     "firebase": "^11.9.0",
-    "framer-motion": "^6.5.1",
     "lottie-react": "^2.4.1",
+    "motion": "^12.18.1",
     "react": "^19.1.0",
     "react-countdown-circle-timer": "^3.2.1",
     "react-datepicker": "^8.4.0",
@@ -26,6 +26,7 @@
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.0",
     "swiper": "^11.2.8",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
